--- a/paginas/proyectos/proyecto-2.html
+++ b/paginas/proyectos/proyecto-2.html
@@ -3,59 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nova | Learn online</title>
+
+    <link rel="stylesheet" href="/css/nova-style.css">
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 </head>
 <body>
     <header>
-        <div>
-            <h1>Learn online</h1>
-            <p>Descripción general</p>
-        </div>
-        <div>
-            <p>Learn Online es una plataforma educativa que ofrece cursos en línea para estudiantes de todas las edades y niveles. Nuestro equipo tuvo la oportunidad de desarrollar una plataforma interactiva que mejorara significativamente la experiencia de aprendizaje de los usuarios.</p>
-            <p>Objetivos del proyecto</p>
-            <ul>
-                <li>Crear una experiencia educativa superior: Diseñar una plataforma intuitiva y fácil de navegar que motivara a los estudiantes a aprender.</li>
-                <li>Incrementar la inscripción en cursos online: Desarrollar estrategias efectivas para atraer nuevos estudiantes y retener a los actuales.</li>
-                <li>Facilitar la gestión de contenido: Implementar un sistema robusto que permitiera a los administradores actualizar cursos y recursos fácilmente.</li>
+        <nav>
+            <div class="logo-site">
+                <a href="/index.html">Nova</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="/index.html">inicio</a></li>
+                <li><a href="/paginas/servicios.html">Servicios</a></li>
+                <li><a href="/paginas/proyectos.html">Proyectos</a></li>
+                <li><a href="/paginas/acerca-de.html">Acerca de</a></li>
+                <li><a href="/paginas/blog.html">Blog</a></li>
             </ul>
-        </div>
+            <div class="btn-black">
+                <a href="/paginas/contacto.html">Contacto</a>
+            </div>
+        </nav>
     </header>
     
-    <main>
-        <section></section>
+    <main class="project-extend">
+        <section class="p-service-content">
+            <div class="title-service">
+                <h1>Learn online</h1>
+                <p class="min-text">Descripción general</p>
+            </div>
+            <div class="text-service">
+                <p>Learn Online es una plataforma educativa que ofrece cursos en línea para estudiantes de todas las edades y niveles. Nuestro equipo tuvo la oportunidad de desarrollar una plataforma interactiva que mejorara significativamente la experiencia de aprendizaje de los usuarios.</p>
+                <p>Objetivos del proyecto</p>
+                <ul>
+                    <li>Crear una experiencia educativa superior: Diseñar una plataforma intuitiva y fácil de navegar que motivara a los estudiantes a aprender.</li>
+                    <li>Incrementar la inscripción en cursos online: Desarrollar estrategias efectivas para atraer nuevos estudiantes y retener a los actuales.</li>
+                    <li>Facilitar la gestión de contenido: Implementar un sistema robusto que permitiera a los administradores actualizar cursos y recursos fácilmente.</li>
+                </ul>
+            </div>
+        </section>
 
-        <section>
+        <section class="parallax"></section>
+
+        <section class="p-ex-text">
             <h2>Servicios utilizados</h2>
 
-            <p>Desarrollo web:</p>
+            <h3>Desarrollo web:</h3>
             <ul>
                 <li>Creación de una plataforma personalizada que soporta múltiples tipos de contenido educativo (videos, quizzes, documentos).</li>
                 <li>Implementación de un diseño responsivo para una experiencia óptima en dispositivos móviles y de escritorio.</li>
                 <li>Integración de herramientas de análisis para monitorear el progreso de los estudiantes y mejorar la personalización del contenido.</li>
             </ul>
 
-            <p>Diseño UX/UI:</p>
+            <h3>Diseño UX/UI:</h3>
             <ul>
                 <li>Desarrollo de una interfaz amigable que asegura una navegación intuitiva y accesible para todos los usuarios.</li>
                 <li>Diseño de experiencias interactivas que fomentan la participación activa y el aprendizaje colaborativo entre los estudiantes.</li>
                 <li>Personalización de la interfaz para adaptarse a las necesidades específicas de diferentes tipos de cursos y audiencias.</li>
             </ul>
 
-            <p>Gestión de contenido:</p>
+            <h3>Gestión de contenido:</h3>
             <ul>
                 <li>Implementación de un sistema de gestión de contenido (CMS) que permite a los administradores actualizar fácilmente materiales de cursos, agregar nuevas lecciones y gestionar inscripciones.</li>
                 <li>Desarrollo de herramientas administrativas para monitorear y analizar el desempeño de los cursos, así como gestionar la comunicación con los estudiantes.</li>
             </ul>
-
-            <div></div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section>
-            <div></div>
-            <div>
+        <section class="am-text-img-content">
+            <div class="am-img-2-content"></div>
+            <div class="am-text-2-content">
                 <h2>Resultados</h2>
                 <ul>
                     <li>Mejora del 35% en la retención de estudiantes: La plataforma interactiva y las herramientas de análisis contribuyeron a una mayor retención de estudiantes a lo largo de los cursos.</li>
@@ -65,10 +84,8 @@
             </div>
         </section>
 
-        <section></section>
-
-        <section>
-            <div>
+        <section class="am-text-img-content">
+            <div class="am-text-2-content">
                 <h2>Estrategia de implementación</h2>
                 <ul>
                     <li>Fase de Planificación: Se realizó una investigación detallada del mercado y las necesidades educativas, identificando áreas clave para la innovación y mejora.</li>
@@ -76,17 +93,53 @@
                     <li>Lanzamiento y Optimización: Se implementaron estrategias de lanzamiento gradual, seguidas de una fase de optimización basada en el feedback de los usuarios y datos analíticos.</li>
                 </ul>
             </div>
-            <div></div>
+            <div class="am-img-2-content"></div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section>
-            <p>Contacto</p>
-            <h2>¡Conéctate con nosotros!</h2>
-            <p>Estamos aquí para ayudarte. Ponte en contacto para cualquier consulta o proyecto. ¡Nos encantaría saber de ti!</p>
-            <div></div>
+        <section class="contact">
+            <div class="contact-content">
+                <p class="min-text">Contacto</p>
+                <h2>¡Conéctate con nosotros!</h2>
+                <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
+                <div class="btn-contact">
+                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="column-name-site">
+                <h3>Nova</h3>
+                <p>En Nova, fusionamos innovación y creatividad para ofrecer soluciones tecnológicas y de diseño digital únicas, adaptadas a las necesidades de cada cliente.</p>
+            </div>
+            <div class="column-list">
+                <h3>Páginas</h3>
+                <ul>
+                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./blog.html">Blog<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./contacto.html">Contacto<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+            <div class="column-list">
+                <h3>Siguenos</h3>
+                <ul>
+                    <li><a href="">Instagram<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Facebook<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Twitter<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Linkedin<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>2024 | Nova Website por Martina Salvatierra - Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
