--- a/paginas/proyectos/proyecto-1.html
+++ b/paginas/proyectos/proyecto-1.html
@@ -3,57 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nova | Fashion hub</title>
+
+    <link rel="stylesheet" href="/css/nova-style.css">
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body>
     <header>
-        <div>
-            <h1>Fashion hub</h1>
-            <p>Descripción general</p>
-        </div>
-        <div>
-            <p>Fashion Hub es una nueva boutique de moda enfocada en la sostenibilidad, que busca ofrecer productos de calidad mientras promueve un estilo de vida responsable. Nuestro equipo tuvo la oportunidad de trabajar en la creación de una identidad visual y una estrategia de marketing digital integral que posicionara a la marca de manera efectiva en un mercado competitivo.</p>
-            <p>Objetivos del proyecto</p>
-            <ul>
-                <li>Establecer una identidad de marca sólida: Crear una imagen que refleje los valores de sostenibilidad y moda ética de Fashion Hub.</li>
-                <li>Aumentar la visibilidad y el reconocimiento: Utilizar estrategias de marketing para atraer a clientes potenciales y generar conciencia de marca.</li>
-                <li>Impulsar el tráfico tanto en la tienda física como en línea: Desarrollar campañas que dirijan a los clientes a todas las plataformas de venta.</li>
+        <nav>
+            <div class="logo-site">
+                <a href="/index.html">Nova</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="/index.html">inicio</a></li>
+                <li><a href="/paginas/servicios.html">Servicios</a></li>
+                <li><a href="/paginas/proyectos.html">Proyectos</a></li>
+                <li><a href="/paginas/acerca-de.html">Acerca de</a></li>
+                <li><a href="/paginas/blog.html">Blog</a></li>
             </ul>
-        </div>
+            <div class="btn-black">
+                <a href="/paginas/contacto.html">Contacto</a>
+            </div>
+        </nav>
     </header>
     
-    <main>
-        <section></section>
+    <main class="project-extend">
+        <section class="p-service-content">
+            <div class="title-service">
+                <h1>Fashion hub</h1>
+                <p class="min-text">Descripción general</p>
+            </div>
+            <div class="text-service">
+                <p>Fashion Hub es una nueva boutique de moda enfocada en la sostenibilidad, que busca ofrecer productos de calidad mientras promueve un estilo de vida responsable. Nuestro equipo tuvo la oportunidad de trabajar en la creación de una identidad visual y una estrategia de marketing digital integral que posicionara a la marca de manera efectiva en un mercado competitivo.</p>
+                <p>Objetivos del proyecto</p>
+                <ul>
+                    <li>Establecer una identidad de marca sólida: Crear una imagen que refleje los valores de sostenibilidad y moda ética de Fashion Hub.</li>
+                    <li>Aumentar la visibilidad y el reconocimiento: Utilizar estrategias de marketing para atraer a clientes potenciales y generar conciencia de marca.</li>
+                    <li>Impulsar el tráfico tanto en la tienda física como en línea: Desarrollar campañas que dirijan a los clientes a todas las plataformas de venta.</li>
+                </ul>
+            </div>
+        </section>
 
-        <section>
+        <section class="project-img-1 parallax"></section>
+
+        <section class="p-ex-text">
             <h2>Servicios utilizados</h2>
 
-            <p>Diseño gráfico:</p>
+            <h3>Diseño gráfico:</h3>
             <ul>
                 <li>Creación de un logotipo distintivo que comunique la esencia de la marca.</li>
                 <li>Desarrollo de una paleta de colores que represente la frescura y la sostenibilidad.</li>
                 <li>Diseño de etiquetas, empaques y material promocional coherente.</li>
             </ul>
 
-            <p>Marketing digital:</p>
+            <h3>Marketing digital:</h3>
             <ul>
                 <li>Implementación de una estrategia de lanzamiento en redes sociales, incluyendo anuncios pagados y contenido orgánico.</li>
                 <li>Desarrollo de campañas de email marketing para mantener informados a los clientes sobre nuevas colecciones y promociones.</li>
             </ul>
 
-            <p>Branding:</p>
+            <h3>Branding:</h3>
             <ul>
                 <li>Elaboración de una guía de estilo que asegura la coherencia en todos los puntos de contacto, desde la publicidad hasta la presencia en redes sociales.</li>
             </ul>
-
-            <div></div>
         </section>
 
-        <section></section>
+        <section class="project-img-2 parallax"></section>
 
-        <section>
-            <div></div>
-            <div>
+        <section class="am-text-img-content">
+            <div class="am-img-2-content"></div>
+            <div class="am-text-2-content">
                 <h2>Resultados</h2>
                 <ul>
                     <li>Incremento del 40% en tráfico en redes sociales: Las campañas en plataformas como Instagram y Facebook generaron un gran interés y participación.</li>
@@ -63,10 +82,8 @@
             </div>
         </section>
 
-        <section></section>
-
-        <section>
-            <div>
+        <section class="am-text-img-content">
+            <div class="am-text-2-content">
                 <h2>Estrategia de implementación</h2>
                 <ul>
                     <li>Fase de Investigación: Realizamos un análisis de mercado para entender las tendencias actuales y las expectativas de los consumidores.</li>
@@ -74,17 +91,53 @@
                     <li>Ejecución de Campañas: Se implementaron campañas promocionales tanto en línea como fuera de línea, utilizando una combinación de anuncios digitales y eventos locales.</li>
                 </ul>
             </div>
-            <div></div>
+            <div class="am-img-2-content"></div>
         </section>
 
-        <section></section>
+        <section class="project-img-3 parallax"></section>
 
-        <section>
-            <p>Contacto</p>
-            <h2>¡Conéctate con nosotros!</h2>
-            <p>Estamos aquí para ayudarte. Ponte en contacto para cualquier consulta o proyecto. ¡Nos encantaría saber de ti!</p>
-            <div></div>
+        <section class="contact">
+            <div class="contact-content">
+                <p class="min-text">Contacto</p>
+                <h2>¡Conéctate con nosotros!</h2>
+                <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
+                <div class="btn-contact">
+                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="column-name-site">
+                <h3>Nova</h3>
+                <p>En Nova, fusionamos innovación y creatividad para ofrecer soluciones tecnológicas y de diseño digital únicas, adaptadas a las necesidades de cada cliente.</p>
+            </div>
+            <div class="column-list">
+                <h3>Páginas</h3>
+                <ul>
+                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./blog.html">Blog<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./contacto.html">Contacto<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+            <div class="column-list">
+                <h3>Siguenos</h3>
+                <ul>
+                    <li><a href="">Instagram<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Facebook<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Twitter<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Linkedin<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>2024 | Nova Website por Martina Salvatierra - Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
