--- a/paginas/proyectos/proyecto-3.html
+++ b/paginas/proyectos/proyecto-3.html
@@ -3,29 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nova | Artisan crafts</title>
+
+    <link rel="stylesheet" href="/css/nova-style.css">
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body>
     <header>
-        <div>
-            <h1>Artisan crafts</h1>
-            <p>Descripción general</p>
-        </div>
-        <div>
-            <p>Artisan Crafts es una marca dedicada a la creación y venta de productos artesanales únicos. Nuestro equipo colaboró estrechamente con la marca para desarrollar una tienda en línea que capturara la esencia artesanal de sus productos, al tiempo que proporcionara una experiencia de compra fluida y atractiva para los clientes.</p>
-            <p>Objetivos del proyecto</p>
-            <ul>
-                <li>Crear una tienda en línea visualmente atractiva: Diseñar una plataforma que reflejara la artesanía y calidad de los productos de Artisan Crafts.</li>
-                <li>Aumentar las ventas y la visibilidad de la marca: Implementar estrategias efectivas de marketing digital para atraer a nuevos clientes y retener a los existentes.</li>
-                <li>Ofrecer una experiencia de compra fluida: Desarrollar una interfaz intuitiva que facilitara la navegación y la compra de productos.</li>
+        <nav>
+            <div class="logo-site">
+                <a href="/index.html">Nova</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="/index.html">inicio</a></li>
+                <li><a href="/paginas/servicios.html">Servicios</a></li>
+                <li><a href="/paginas/proyectos.html">Proyectos</a></li>
+                <li><a href="/paginas/acerca-de.html">Acerca de</a></li>
+                <li><a href="/paginas/blog.html">Blog</a></li>
             </ul>
-        </div>
+            <div class="btn-black">
+                <a href="/paginas/contacto.html">Contacto</a>
+            </div>
+        </nav>
     </header>
     
-    <main>
-        <section></section>
+    <main class="project-extend">
+        <section class="p-service-content">
+            <div class="title-service">
+                <h1>Artisan crafts</h1>
+                <p class="min-text">Descripción general</p>
+            </div>
+            <div class="text-service">
+                <p>Artisan Crafts es una marca dedicada a la creación y venta de productos artesanales únicos. Nuestro equipo colaboró estrechamente con la marca para desarrollar una tienda en línea que capturara la esencia artesanal de sus productos, al tiempo que proporcionara una experiencia de compra fluida y atractiva para los clientes.</p>
+                <p>Objetivos del proyecto</p>
+                <ul>
+                    <li>Crear una tienda en línea visualmente atractiva: Diseñar una plataforma que reflejara la artesanía y calidad de los productos de Artisan Crafts.</li>
+                    <li>Aumentar las ventas y la visibilidad de la marca: Implementar estrategias efectivas de marketing digital para atraer a nuevos clientes y retener a los existentes.</li>
+                    <li>Ofrecer una experiencia de compra fluida: Desarrollar una interfaz intuitiva que facilitara la navegación y la compra de productos.</li>
+                </ul>
+            </div>
+        </section>
 
-        <section>
+        <section class="parallax"></section>
+
+        <section class="p-ex-text">
             <h2>Servicios utilizados</h2>
 
             <p>Desarrollo E-commerce:</p>
@@ -47,15 +68,13 @@
                 <li>Configuración de un sistema de gestión de contenido fácil de usar para que el equipo de Artisan Crafts pueda actualizar y administrar el catálogo de productos de manera eficiente.</li>
                 <li>Desarrollo de estrategias de contenido para destacar productos destacados, promociones especiales y colaboraciones artísticas.</li>
             </ul>
-
-            <div></div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section>
-            <div></div>
-            <div>
+        <section class="am-text-img-content">
+            <div class="am-img-2-content"></div>
+            <div class="am-text-2-content">
                 <h2>Resultados</h2>
                 <ul>
                     <li>Incremento del 60% en las ventas en línea durante el primer año: La tienda en línea atrajo a nuevos clientes y facilitó las compras repetidas.</li>
@@ -65,10 +84,8 @@
             </div>
         </section>
 
-        <section></section>
-
-        <section>
-            <div>
+        <section class="am-text-img-content">
+            <div class="am-text-2-content">
                 <h2>Estrategia de implementación</h2>
                 <ul>
                     <li>Investigación de Mercado: Análisis detallado del mercado de productos artesanales y tendencias de consumo en línea.</li>
@@ -76,19 +93,53 @@
                     <li>Lanzamiento y Promoción: Implementación de campañas de marketing digital y promocionales para lanzar la tienda en línea y atraer tráfico inicial.</li>
                 </ul>
             </div>
-            <div></div>
+            <div class="am-img-2-content"></div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section></section>
-
-        <section>
-            <p>Contacto</p>
-            <h2>¡Conéctate con nosotros!</h2>
-            <p>Estamos aquí para ayudarte. Ponte en contacto para cualquier consulta o proyecto. ¡Nos encantaría saber de ti!</p>
-            <div></div>
+        <section class="contact">
+            <div class="contact-content">
+                <p class="min-text">Contacto</p>
+                <h2>¡Conéctate con nosotros!</h2>
+                <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
+                <div class="btn-contact">
+                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="column-name-site">
+                <h3>Nova</h3>
+                <p>En Nova, fusionamos innovación y creatividad para ofrecer soluciones tecnológicas y de diseño digital únicas, adaptadas a las necesidades de cada cliente.</p>
+            </div>
+            <div class="column-list">
+                <h3>Páginas</h3>
+                <ul>
+                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./blog.html">Blog<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./contacto.html">Contacto<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+            <div class="column-list">
+                <h3>Siguenos</h3>
+                <ul>
+                    <li><a href="">Instagram<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Facebook<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Twitter<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Linkedin<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>2024 | Nova Website por Martina Salvatierra - Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
