--- a/paginas/proyectos/proyecto-4.html
+++ b/paginas/proyectos/proyecto-4.html
@@ -3,29 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nova | Travel Explorer</title>
+
+    <link rel="stylesheet" href="/css/nova-style.css">
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body>
     <header>
-        <div>
-            <h1>Travel Explorer</h1>
-            <p>Descripción general</p>
-        </div>
-        <div>
-            <p>Travel Explorer es una plataforma digital diseñada para inspirar y facilitar la planificación de viajes, ofreciendo información detallada sobre destinos, recomendaciones de actividades y herramientas para reservar alojamientos y transportes. Nuestro equipo colaboró con Travel Explorer para desarrollar una experiencia digital que conectara a los viajeros con experiencias únicas alrededor del mundo.</p>
-            <p>Objetivos del proyecto</p>
-            <ul>
-                <li>Inspirar viajes y descubrimientos: Proporcionar contenido visualmente atractivo y narrativas inspiradoras que motiven a los usuarios a explorar nuevos destinos y culturas.</li>
-                <li>Facilitar la planificación de viajes: Ofrecer herramientas y recursos para ayudar a los usuarios a organizar y reservar viajes de manera eficiente y personalizada.</li>
-                <li>Crear una comunidad de viajeros: Fomentar la interacción entre los usuarios, permitiéndoles compartir experiencias, consejos y recomendaciones de viaje.</li>
+        <nav>
+            <div class="logo-site">
+                <a href="/index.html">Nova</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="/index.html">inicio</a></li>
+                <li><a href="/paginas/servicios.html">Servicios</a></li>
+                <li><a href="/paginas/proyectos.html">Proyectos</a></li>
+                <li><a href="/paginas/acerca-de.html">Acerca de</a></li>
+                <li><a href="/paginas/blog.html">Blog</a></li>
             </ul>
-        </div>
+            <div class="btn-black">
+                <a href="/paginas/contacto.html">Contacto</a>
+            </div>
+        </nav>
     </header>
     
-    <main>
-        <section></section>
+    <main class="project-extend">
+        <section class="p-service-content">
+            <div class="title-service">
+                <h1>Travel Explorer</h1>
+                <p class="min-text">Descripción general</p>
+            </div>
+            <div class="text-service">
+                <p>Travel Explorer es una plataforma digital diseñada para inspirar y facilitar la planificación de viajes, ofreciendo información detallada sobre destinos, recomendaciones de actividades y herramientas para reservar alojamientos y transportes. Nuestro equipo colaboró con Travel Explorer para desarrollar una experiencia digital que conectara a los viajeros con experiencias únicas alrededor del mundo.</p>
+                <p>Objetivos del proyecto</p>
+                <ul>
+                    <li>Inspirar viajes y descubrimientos: Proporcionar contenido visualmente atractivo y narrativas inspiradoras que motiven a los usuarios a explorar nuevos destinos y culturas.</li>
+                    <li>Facilitar la planificación de viajes: Ofrecer herramientas y recursos para ayudar a los usuarios a organizar y reservar viajes de manera eficiente y personalizada.</li>
+                    <li>Crear una comunidad de viajeros: Fomentar la interacción entre los usuarios, permitiéndoles compartir experiencias, consejos y recomendaciones de viaje.</li>
+                </ul>
+            </div>
+        </section>
 
-        <section>
+        <section class="parallax"></section>
+
+        <section class="p-ex-text">
             <h2>Servicios utilizados</h2>
 
             <p>Desarrollo web y diseño UX/UI:</p>
@@ -46,15 +67,13 @@
                 <li>Creación de perfiles de usuario que permiten a los viajeros guardar sus destinos favoritos, compartir itinerarios y conectar con otros usuarios.</li>
                 <li>Implementación de funciones de revisión y comentarios para que los usuarios puedan compartir sus experiencias y recomendaciones directamente en la plataforma.</li>
             </ul>
-
-            <div></div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section>
-            <div></div>
-            <div>
+        <section class="am-text-img-content">
+            <div class="am-img-2-content"></div>
+            <div class="am-text-2-content">
                 <h2>Resultados</h2>
                 <ul>
                     <li>Aumento en la planificación de viajes: Travel Explore ha facilitado la planificación de viajes para miles de usuarios, ofreciendo opciones personalizadas y herramientas prácticas.</li>
@@ -64,10 +83,8 @@
             </div>
         </section>
 
-        <section></section>
-
-        <section>
-            <div>
+        <section class="am-text-img-content">
+            <div class="am-text-2-content">
                 <h2>Estrategia de implementación</h2>
                 <ul>
                     <li>Investigación y Análisis de Mercado: Estudio detallado de las tendencias y preferencias de viaje para desarrollar una plataforma que responda a las necesidades de los usuarios.</li>
@@ -75,19 +92,53 @@
                     <li>Lanzamiento y Promoción: Implementación de estrategias de marketing digital para promover la plataforma y atraer a una audiencia global de viajeros, utilizando redes sociales, campañas de email marketing y colaboraciones con influencers de viaje.</li>
                 </ul>
             </div>
-            <div></div>
+            <div class="am-img-2-content"></div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section></section>
-
-        <section>
-            <p>Contacto</p>
-            <h2>¡Conéctate con nosotros!</h2>
-            <p>Estamos aquí para ayudarte. Ponte en contacto para cualquier consulta o proyecto. ¡Nos encantaría saber de ti!</p>
-            <div></div>
+        <section class="contact">
+            <div class="contact-content">
+                <p class="min-text">Contacto</p>
+                <h2>¡Conéctate con nosotros!</h2>
+                <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
+                <div class="btn-contact">
+                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="column-name-site">
+                <h3>Nova</h3>
+                <p>En Nova, fusionamos innovación y creatividad para ofrecer soluciones tecnológicas y de diseño digital únicas, adaptadas a las necesidades de cada cliente.</p>
+            </div>
+            <div class="column-list">
+                <h3>Páginas</h3>
+                <ul>
+                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./blog.html">Blog<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./contacto.html">Contacto<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+            <div class="column-list">
+                <h3>Siguenos</h3>
+                <ul>
+                    <li><a href="">Instagram<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Facebook<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Twitter<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Linkedin<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>2024 | Nova Website por Martina Salvatierra - Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
