--- a/paginas/proyectos/proyecto-5.html
+++ b/paginas/proyectos/proyecto-5.html
@@ -7,25 +7,43 @@
 </head>
 <body>
     <header>
-        <div>
-            <h1>Healthy bites</h1>
-            <p>Descripción general</p>
-        </div>
-        <div>
-            <p>Healthy Bites es una startup dedicada a ofrecer opciones de alimentación saludable a través de una plataforma de entrega de comida preparada. Nuestro equipo colaboró con Healthy Bites para desarrollar una aplicación móvil y una plataforma web que facilitara a los usuarios la elección y el pedido de comidas nutritivas y equilibradas.</p>
-            <p>Objetivos del proyecto</p>
-            <ul>
-                <li>Crear una plataforma intuitiva y funcional: Desarrollar una aplicación móvil y una plataforma web que permitieran a los usuarios explorar fácilmente opciones de comida saludable y realizar pedidos rápidos.</li>
-                <li>Promover hábitos alimenticios saludables: Educar a los usuarios sobre los beneficios de una dieta equilibrada y facilitar el acceso a alimentos nutritivos.</li>
-                <li>Expandir el alcance del negocio: Establecer una presencia digital sólida para atraer nuevos clientes y expandir las operaciones de entrega.</li>
+        <nav>
+            <div class="logo-site">
+                <a href="/index.html">Nova</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="/index.html">inicio</a></li>
+                <li><a href="/paginas/servicios.html">Servicios</a></li>
+                <li><a href="/paginas/proyectos.html">Proyectos</a></li>
+                <li><a href="/paginas/acerca-de.html">Acerca de</a></li>
+                <li><a href="/paginas/blog.html">Blog</a></li>
             </ul>
-        </div>
+            <div class="btn-black">
+                <a href="/paginas/contacto.html">Contacto</a>
+            </div>
+        </nav>
     </header>
     
-    <main>
-        <section></section>
+    <main class="project-extend">
+        <section class="p-service-content">
+            <div class="title-service">
+                <h1>Healthy bites</h1>
+                <p class="min-text">Descripción general</p>
+            </div>
+            <div class="text-service">
+                <p>Healthy Bites es una startup dedicada a ofrecer opciones de alimentación saludable a través de una plataforma de entrega de comida preparada. Nuestro equipo colaboró con Healthy Bites para desarrollar una aplicación móvil y una plataforma web que facilitara a los usuarios la elección y el pedido de comidas nutritivas y equilibradas.</p>
+                <p>Objetivos del proyecto</p>
+                <ul>
+                    <li>Crear una plataforma intuitiva y funcional: Desarrollar una aplicación móvil y una plataforma web que permitieran a los usuarios explorar fácilmente opciones de comida saludable y realizar pedidos rápidos.</li>
+                    <li>Promover hábitos alimenticios saludables: Educar a los usuarios sobre los beneficios de una dieta equilibrada y facilitar el acceso a alimentos nutritivos.</li>
+                    <li>Expandir el alcance del negocio: Establecer una presencia digital sólida para atraer nuevos clientes y expandir las operaciones de entrega.</li>
+                </ul>
+            </div>
+        </section>
 
-        <section>
+        <section class="parallax"></section>
+
+        <section class="p-ex-text">
             <h2>Servicios utilizados</h2>
 
             <p>Desarrollo de aplicaciones móviles:</p>
@@ -48,15 +66,13 @@
                 <li>Diseño de experiencias interactivas que educaran a los usuarios sobre nutrición y opciones de comida saludable.</li>
                 <li>Personalización del diseño para reflejar la identidad visual de Healthy Bites y crear una conexión emocional con los usuarios.</li>
             </ul>
-
-            <div></div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section>
-            <div></div>
-            <div>
+        <section class="am-text-img-content">
+            <div class="am-img-2-content"></div>
+            <div class="am-text-2-content">
                 <h2>Resultados</h2>
                 <ul>
                     <li>Incremento del 45% en el número de pedidos en línea:  La aplicación y la plataforma web atrajeron a nuevos clientes y aumentaron la frecuencia de compra entre los usuarios existentes.</li>
@@ -66,10 +82,8 @@
             </div>
         </section>
 
-        <section></section>
-
-        <section>
-            <div>
+        <section class="am-text-img-content">
+            <div class="am-text-2-content">
                 <h2>Estrategia de implementación</h2>
                 <ul>
                     <li>Fase de Investigación y Desarrollo: Análisis detallado de las necesidades del mercado y la competencia, identificando oportunidades para innovar en el sector de la alimentación saludable.</li>
@@ -77,19 +91,53 @@
                     <li>Lanzamiento y Promoción: Implementación de campañas de marketing digital para promover el lanzamiento de la aplicación y la plataforma web, utilizando estrategias de redes sociales y colaboraciones con influencers.</li>
                 </ul>
             </div>
-            <div></div>
+            <div class="am-img-2-content"></div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section></section>
-
-        <section>
-            <p>Contacto</p>
-            <h2>¡Conéctate con nosotros!</h2>
-            <p>Estamos aquí para ayudarte. Ponte en contacto para cualquier consulta o proyecto. ¡Nos encantaría saber de ti!</p>
-            <div></div>
+        <section class="contact">
+            <div class="contact-content">
+                <p class="min-text">Contacto</p>
+                <h2>¡Conéctate con nosotros!</h2>
+                <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
+                <div class="btn-contact">
+                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="column-name-site">
+                <h3>Nova</h3>
+                <p>En Nova, fusionamos innovación y creatividad para ofrecer soluciones tecnológicas y de diseño digital únicas, adaptadas a las necesidades de cada cliente.</p>
+            </div>
+            <div class="column-list">
+                <h3>Páginas</h3>
+                <ul>
+                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./blog.html">Blog<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./contacto.html">Contacto<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+            <div class="column-list">
+                <h3>Siguenos</h3>
+                <ul>
+                    <li><a href="">Instagram<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Facebook<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Twitter<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Linkedin<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>2024 | Nova Website por Martina Salvatierra - Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
