--- a/paginas/blogs/blog-1.html
+++ b/paginas/blogs/blog-1.html
@@ -146,11 +146,11 @@
                     <h4>Conclusión</h4>
                     <p>Mejorar la experiencia del usuario es un proceso continuo que requiere atención constante y ajustes según los resultados y el feedback. Implementa las estrategias mencionadas y utiliza las herramientas adecuadas para asegurarte de que tu sitio web ofrezca la mejor experiencia posible a tus usuarios. Una buena UX no solo aumenta la satisfacción del usuario, sino que también puede mejorar significativamente los resultados de tu negocio.</p>
                 </div>
-                <div class="bc-author">
-                    <img src="" alt="">
+                <div class="client-info">
+                    <img src="/imagenes/5.jpg" alt="">
                     <div>
-                        <p></p>
-                        <p></p>
+                        <p>Sofía Martínez</p>
+                        <p class="company">Visionary Solutions</p>
                     </div>
                 </div>
             </div>
