--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <div class="logo-site">
-                <a href="../index.html">Nova</a>
+                <a href="/index.html">Nova</a>
             </div>
             <ul class="nav-links">
-                <li><a href="../index.html">inicio</a></li>
+                <li><a href="/index.html">inicio</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
                 <li><a href="./proyectos.html">Proyectos</a></li>
                 <li><a href="./acerca-de.html">Acerca de</a></li>
@@ -43,7 +43,7 @@
                 <h2>Fashion hub</h2>
                 <p>Creamos una identidad visual y estrategia de marketing digital para una boutique de moda. Esto resultó en un aumento del tráfico en redes sociales y mayores ventas en la tienda.</p>
                 <div class="btn-explore">
-                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                    <a href="./proyectos/proyecto-1.html"><i class="las la-arrow-down"></i>Explorar</a>
                 </div>
             </div>
         </section>
@@ -53,7 +53,7 @@
                 <h2>Learn online</h2>
                 <p>Desarrollamos un portal educativo interactivo para una institución académica. La plataforma mejoró la retención de estudiantes y aumentó las inscripciones.</p>
                 <div class="btn-explore">
-                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                    <a href="./proyectos/proyecto-2.html"><i class="las la-arrow-down"></i>Explorar</a>
                 </div>
             </div>
         </section>
@@ -63,7 +63,7 @@
                 <h2>Artisan crafts</h2>
                 <p>Diseñamos una tienda en línea para una marca de productos artesanales. Esto llevó a un notable incremento en las ventas en el primer año.</p>
                 <div class="btn-explore">
-                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                    <a href="./proyectos/proyecto-3.html"><i class="las la-arrow-down"></i>Explorar</a>
                 </div>
             </div>
         </section>
@@ -73,7 +73,7 @@
                 <h2>Travel explorer</h2>
                 <p>Creamos una plataforma de viajes que conecta a usuarios con experiencias únicas. Incluimos un blog que ayudó a aumentar la base de usuarios registrados.</p>
                 <div class="btn-explore">
-                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                    <a href="./proyectos/proyecto-4.html"><i class="las la-arrow-down"></i>Explorar</a>
                 </div>
             </div>
         </section>
@@ -83,7 +83,7 @@
                 <h2>Healthy bites</h2>
                 <p>Desarrollamos una plataforma digital avanzada para facilitar pedidos de comida saludable, incrementando significativamente las ventas en línea y mejorando la experiencia del usuario.</p>
                 <div class="btn-explore">
-                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                    <a href="./proyectos/proyecto-5.html"><i class="las la-arrow-down"></i>Explorar</a>
                 </div>
             </div>
         </section>
@@ -94,7 +94,7 @@
                 <h2>¡Conéctate con nosotros!</h2>
                 <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
                 <div class="btn-contact">
-                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                    <a href="./contacto.html">Hablemos<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
         </section>
@@ -109,7 +109,7 @@
             <div class="column-list">
                 <h3>Páginas</h3>
                 <ul>
-                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="/index.html">Inicio<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
