--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <div class="logo-site">
-                <a href="../index.html">Nova</a>
+                <a href="/index.html">Nova</a>
             </div>
             <ul class="nav-links">
-                <li><a href="../index.html">inicio</a></li>
+                <li><a href="/index.html">inicio</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
                 <li><a href="./proyectos.html">Proyectos</a></li>
                 <li><a href="./acerca-de.html">Acerca de</a></li>
@@ -50,18 +50,10 @@
                 <p>Nuestro equipo de diseñadores gráficos talentosos está dedicado a crear identidades visuales impactantes que resuenen con tu audiencia. Desde logotipos y branding hasta materiales de marketing, trabajamos para asegurar que cada elemento visual de tu marca sea cohesivo y memorable.</p>
                 <p>Servicios incluidos:</p>
                 <ul>
-                    <li>
-                        Branding y identidad visual: Desarrollamos marcas sólidas que comunican la esencia de tu empresa.
-                    </li>
-                    <li>
-                        Diseño de materiales de marketing: Creamos folletos, tarjetas de presentación, posters y más, todos alineados con la identidad de tu marca.
-                    </li>
-                    <li>
-                        Diseño de embalaje: Diseñamos empaques atractivos y funcionales que destacan en el mercado.
-                    </li>
-                    <li>
-                        Diseño digital: Elaboramos gráficos para redes sociales, anuncios digitales y más.
-                    </li>
+                    <li>Branding y identidad visual: Desarrollamos marcas sólidas que comunican la esencia de tu empresa.</li>
+                    <li>Diseño de materiales de marketing: Creamos folletos, tarjetas de presentación, posters y más, todos alineados con la identidad de tu marca.</li>
+                    <li>Diseño de embalaje: Diseñamos empaques atractivos y funcionales que destacan en el mercado.</li>
+                    <li>Diseño digital: Elaboramos gráficos para redes sociales, anuncios digitales y más.</li>
                 </ul>
             </div>
         </section>
@@ -77,18 +69,10 @@
                 <p>Nuestro equipo de desarrollo web se especializa en crear sitios web personalizados que no solo se ven bien, sino que también ofrecen una experiencia de usuario óptima. Utilizando las últimas tecnologías, nos aseguramos de que tu sitio web sea funcional, atractivo y fácil de usar.</p>
                 <p>Servicios incluidos:</p>
                 <ul>
-                    <li>
-                        Desarrollo de sitios web personalizados: Creamos sitios web a medida que se alinean con tus objetivos comerciales.
-                    </li>
-                    <li>
-                        Diseño responsivo: Aseguramos que tu sitio web se vea y funcione perfectamente en todos los dispositivos.
-                    </li>
-                    <li>
-                        E-commerce: Desarrollamos tiendas en línea que facilitan una experiencia de compra fluida para tus clientes.
-                    </li>
-                    <li>
-                        Mantenimiento y soporte: Ofrecemos servicios continuos para mantener tu sitio web actualizado y seguro.
-                    </li>
+                    <li>Desarrollo de sitios web personalizados: Creamos sitios web a medida que se alinean con tus objetivos comerciales.</li>
+                    <li>Diseño responsivo: Aseguramos que tu sitio web se vea y funcione perfectamente en todos los dispositivos.</li>
+                    <li>E-commerce: Desarrollamos tiendas en línea que facilitan una experiencia de compra fluida para tus clientes.</li>
+                    <li>Mantenimiento y soporte: Ofrecemos servicios continuos para mantener tu sitio web actualizado y seguro.</li>
                 </ul>
             </div>
         </section>
@@ -104,18 +88,10 @@
                 <p>En Nova, nuestras estrategias de marketing digital están diseñadas para aumentar tu visibilidad, atraer a tu audiencia objetivo y convertir prospectos en clientes leales. Combinamos creatividad con análisis de datos para crear campañas efectivas y medibles.</p>
                 <p>Servicios incluidos:</p>
                 <ul>
-                    <li>
-                        Estrategia de marketing digital: Desarrollamos planes personalizados que alinean con tus objetivos comerciales.
-                    </li>
-                    <li>
-                        Gestión de redes sociales: Creamos y gestionamos contenido atractivo para conectar con tu audiencia.
-                    </li>
-                    <li>
-                        SEO y SEM: Optimizamos tu presencia en línea para mejorar tu ranking en motores de búsqueda y atraer tráfico relevante.
-                    </li>
-                    <li>
-                        Email marketing: Diseñamos campañas de email marketing que mantienen a tus clientes informados y comprometidos.
-                    </li>
+                    <li>Estrategia de marketing digital: Desarrollamos planes personalizados que alinean con tus objetivos comerciales.</li>
+                    <li>Gestión de redes sociales: Creamos y gestionamos contenido atractivo para conectar con tu audiencia.</li>
+                    <li>SEO y SEM: Optimizamos tu presencia en línea para mejorar tu ranking en motores de búsqueda y atraer tráfico relevante.</li>
+                    <li>Email marketing: Diseñamos campañas de email marketing que mantienen a tus clientes informados y comprometidos.</li>
                 </ul>
             </div>
         </section>
@@ -128,7 +104,7 @@
                 <h2>¡Conéctate con nosotros!</h2>
                 <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
                 <div class="btn-contact">
-                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                    <a href="./contacto.html">Hablemos<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
         </section>
@@ -143,7 +119,7 @@
             <div class="column-list">
                 <h3>Páginas</h3>
                 <ul>
-                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="/index.html">Inicio<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
