--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <nav>
             <div class="logo-site">
-                <a href="">Nova</a>
+                <a href="/index.html">Nova</a>
             </div>
             <ul class="nav-links">
-                <li><a href="./index.html">inicio</a></li>
+                <li><a href="/index.html">inicio</a></li>
                 <li><a href="./paginas/servicios.html">Servicios</a></li>
                 <li><a href="./paginas/proyectos.html">Proyectos</a></li>
                 <li><a href="./paginas/acerca-de.html">Acerca de</a></li>
@@ -72,19 +72,19 @@
                 <div class="img-project-1  parallax">
                     <h3>Fashion hub</h3>
                     <div class="btn-explore">
-                        <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                        <a href="./paginas/proyectos/proyecto-1.html"><i class="las la-arrow-down"></i>Explorar</a>
                     </div>
                 </div>
                 <div class="img-project-2 parallax">
                     <h3>Learn online</h3>
                     <div class="btn-explore">
-                        <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                        <a href="./paginas/proyectos/proyecto-2.html"><i class="las la-arrow-down"></i>Explorar</a>
                     </div>
                 </div>
                 <div class="img-project-3 parallax">
                     <h3>Artisan crafts</h3>
                     <div class="btn-explore">
-                        <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                        <a href="./paginas/proyectos/proyecto-3.html"><i class="las la-arrow-down"></i>Explorar</a>
                     </div>
                 </div>
             </div>
@@ -216,7 +216,7 @@
             <div class="column-list">
                 <h3>Páginas</h3>
                 <ul>
-                    <li><a href="./index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="/index.html">Inicio<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./paginas/servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./paginas/proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./paginas/acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
