--- a/paginas/acerca-de.html
+++ b/paginas/acerca-de.html
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <div class="logo-site">
-                <a href="../index.html">Nova</a>
+                <a href="/index.html">Nova</a>
             </div>
             <ul class="nav-links">
-                <li><a href="../index.html">inicio</a></li>
+                <li><a href="/index.html">inicio</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
                 <li><a href="./proyectos.html">Proyectos</a></li>
                 <li><a href="./acerca-de.html">Acerca de</a></li>
@@ -48,7 +48,7 @@
             <p>En nuestros primeros años, nos enfocamos en proyectos locales, ayudando a pequeñas empresas a establecer una presencia en línea y a mejorar su imagen de marca. Con el tiempo, nuestra reputación por entregar trabajos de alta calidad y creatividad nos permitió atraer a clientes más grandes y diversificados, expandiéndonos a nivel nacional e internacional. Esta evolución ha sido guiada por nuestro compromiso constante con la innovación y la excelencia en todo lo que hacemos.</p>
         </section>
 
-        <section class="parallax"></section>
+        <section class="ab-img-1 parallax"></section>
 
         <section class="am-text-img-content">
             <div class="am-img-1-content"></div>
@@ -60,7 +60,7 @@
             </div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="ab-img-2 parallax"></section>
 
         <section class="am-text-img-content">
             <div class="am-text-2-content">
@@ -76,7 +76,7 @@
             <div class="am-img-2-content"></div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="ab-img-3 parallax"></section>
 
         <section class="team">
             <div class="team-content">
@@ -121,7 +121,7 @@
                 <h2>¡Conéctate con nosotros!</h2>
                 <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
                 <div class="btn-contact">
-                    <a href="../paginas/contacto.html">Hablemos<i class="las la-arrow-down"></i></a>
+                    <a href="./contacto.html">Hablemos<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
         </section>
@@ -136,7 +136,7 @@
             <div class="column-list">
                 <h3>Páginas</h3>
                 <ul>
-                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="/index.html">Inicio<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
