--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <div class="logo-site">
-                <a href="../index.html">Nova</a>
+                <a href="/index.html">Nova</a>
             </div>
             <ul class="nav-links">
-                <li><a href="../index.html">inicio</a></li>
+                <li><a href="/index.html">inicio</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
                 <li><a href="./proyectos.html">Proyectos</a></li>
                 <li><a href="./acerca-de.html">Acerca de</a></li>
@@ -38,12 +38,12 @@
             </div>
         </section>
 
-        <section class="first-blog parallax-text blog-parallax  " id="p-blog">
+        <section class="first-blog parallax-text blog-parallax" id="p-blog">
             <div class="overlay">
                 <h2>¿Cómo mejorar la experiencia del usuario en tu sitio web?</h2>
                 <p>Descubre estrategias prácticas y efectivas para optimizar la experiencia del usuario en tu sitio web, desde la navegación hasta el diseño de interfaz.</p>
                 <div class="btn-explore">
-                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                    <a href="./blogs/blog-1.html"><i class="las la-arrow-down"></i>Leer más</a>
                 </div>
             </div>
         </section>
@@ -53,7 +53,7 @@
                 <h2>Introducción a la realidad aumentada en aplicaciones móviles</h2>
                 <p>Aprende cómo la realidad aumentada está cambiando la forma en que interactuamos con las aplicaciones móviles, proporcionando experiencias más inmersivas y personalizadas.</p>
                 <div class="btn-explore">
-                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                    <a href="./blogs/blog-2.html"><i class="las la-arrow-down"></i>Leer más</a>
                 </div>
             </div>
         </section>
@@ -63,7 +63,7 @@
                 <h2>Impacto de la inteligencia artificial en el marketing digital</h2>
                 <p>Descubre cómo la inteligencia artificial está transformando el marketing digital, desde la personalización de contenidos hasta la automatización de campañas.</p>
                 <div class="btn-explore">
-                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                    <a href="./blogs/blog-3.html"><i class="las la-arrow-down"></i>Leer más</a>
                 </div>
             </div>
         </section>
@@ -73,7 +73,7 @@
                 <h2>El futuro del eCommerce: Tendencias y tecnologías disruptivas</h2>
                 <p>Analiza las tendencias emergentes y las tecnologías disruptivas que están modelando el futuro del comercio electrónico y cómo puedes adaptarte para aprovecharlas.</p>
                 <div class="btn-explore">
-                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                    <a href="./blogs/blog-4.html"><i class="las la-arrow-down"></i>Leer más</a>
                 </div>
             </div>
         </section>
@@ -83,7 +83,7 @@
                 <h2>Diseño audiovisual: Integrando sonido y video en experiencias digitales</h2>
                 <p>Explora cómo integrar de manera efectiva elementos audiovisuales en tus proyectos digitales para crear experiencias más inmersivas y atractivas para los usuarios.</p>
                 <div class="btn-explore">
-                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                    <a href="/paginas/blogs/blog-5.html"><i class="las la-arrow-down"></i>Leer más</a>
                 </div>
             </div>
         </section>
@@ -94,7 +94,7 @@
                 <h2>¡Conéctate con nosotros!</h2>
                 <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
                 <div class="btn-contact">
-                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                    <a href="./contacto.html">Hablemos<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
         </section>
@@ -109,7 +109,7 @@
             <div class="column-list">
                 <h3>Páginas</h3>
                 <ul>
-                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="/index.html">Inicio<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
