--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <div class="logo-site">
-                <a href="../index.html">Nova</a>
+                <a href="/index.html">Nova</a>
             </div>
             <ul class="nav-links">
-                <li><a href="../index.html">inicio</a></li>
+                <li><a href="/index.html">inicio</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
                 <li><a href="./proyectos.html">Proyectos</a></li>
                 <li><a href="./acerca-de.html">Acerca de</a></li>
@@ -29,7 +29,7 @@
 
     <main>
         <section class="contact-page">
-            <div class="contact-title">
+            <div class="contact-title parallax">
                 <p class="min-text">Contacto</p>
                 <h1>Pongámonos en contacto</h1>
             </div>
@@ -85,7 +85,7 @@
                 <h2>¡Conéctate con nosotros!</h2>
                 <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
                 <div class="btn-contact">
-                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                    <a href="./contacto.html">Hablemos<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
         </section>
@@ -100,7 +100,7 @@
             <div class="column-list">
                 <h3>Páginas</h3>
                 <ul>
-                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="/index.html">Inicio<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
                     <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
