vigesimo primer cambio

--- a/paginas/proyectos/proyecto-1.html
+++ b/paginas/proyectos/proyecto-1.html
@@ -44,7 +44,7 @@
             </div>
         </section>
 
-        <section class="project-img-1 parallax"></section>
+        <section class="project1-img-1 parallax"></section>
 
         <section class="p-ex-text">
             <h2>Servicios utilizados</h2>
@@ -68,10 +68,10 @@
             </ul>
         </section>
 
-        <section class="project-img-2 parallax"></section>
+        <section class="project1-img-2 parallax"></section>
 
         <section class="am-text-img-content">
-            <div class="am-img-2-content"></div>
+            <div class="project1-img-3 am-img-2-content"></div>
             <div class="am-text-2-content">
                 <h2>Resultados</h2>
                 <ul>
@@ -91,10 +91,10 @@
                     <li>Ejecución de Campañas: Se implementaron campañas promocionales tanto en línea como fuera de línea, utilizando una combinación de anuncios digitales y eventos locales.</li>
                 </ul>
             </div>
-            <div class="am-img-2-content"></div>
+            <div class="project1-img-4 am-img-2-content"></div>
         </section>
 
-        <section class="project-img-3 parallax"></section>
+        <section class="project1-img-5 parallax"></section>
 
         <section class="contact">
             <div class="contact-content">
