--- a/paginas/proyectos/proyecto-3.html
+++ b/paginas/proyectos/proyecto-3.html
@@ -44,7 +44,7 @@
             </div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="project3-img-1 parallax"></section>
 
         <section class="p-ex-text">
             <h2>Servicios utilizados</h2>
@@ -70,10 +70,10 @@
             </ul>
         </section>
 
-        <section class="parallax"></section>
+        <section class="project3-img-2 parallax"></section>
 
         <section class="am-text-img-content">
-            <div class="am-img-2-content"></div>
+            <div class="project3-img-3 am-img-2-content"></div>
             <div class="am-text-2-content">
                 <h2>Resultados</h2>
                 <ul>
@@ -93,10 +93,10 @@
                     <li>Lanzamiento y Promoción: Implementación de campañas de marketing digital y promocionales para lanzar la tienda en línea y atraer tráfico inicial.</li>
                 </ul>
             </div>
-            <div class="am-img-2-content"></div>
+            <div class="project3-img-4 am-img-2-content"></div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="project3-img-5 parallax"></section>
 
         <section class="contact">
             <div class="contact-content">
