--- a/paginas/proyectos/proyecto-4.html
+++ b/paginas/proyectos/proyecto-4.html
@@ -44,7 +44,7 @@
             </div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="project4-img-1 parallax"></section>
 
         <section class="p-ex-text">
             <h2>Servicios utilizados</h2>
@@ -69,10 +69,10 @@
             </ul>
         </section>
 
-        <section class="parallax"></section>
+        <section class="project4-img-2 parallax"></section>
 
         <section class="am-text-img-content">
-            <div class="am-img-2-content"></div>
+            <div class="project4-img-3 am-img-2-content"></div>
             <div class="am-text-2-content">
                 <h2>Resultados</h2>
                 <ul>
@@ -92,10 +92,10 @@
                     <li>Lanzamiento y Promoción: Implementación de estrategias de marketing digital para promover la plataforma y atraer a una audiencia global de viajeros, utilizando redes sociales, campañas de email marketing y colaboraciones con influencers de viaje.</li>
                 </ul>
             </div>
-            <div class="am-img-2-content"></div>
+            <div class="project4-img-4 am-img-2-content"></div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="project4-img-5 parallax"></section>
 
         <section class="contact">
             <div class="contact-content">
