vigesimo segundo cambio

--- a/paginas/proyectos/proyecto-5.html
+++ b/paginas/proyectos/proyecto-5.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nova | Healthy bites</title>
+
+    <link rel="stylesheet" href="/css/nova-style.css">
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body>
     <header>
@@ -41,7 +44,7 @@
             </div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="project5-img-1 parallax"></section>
 
         <section class="p-ex-text">
             <h2>Servicios utilizados</h2>
@@ -68,10 +71,10 @@
             </ul>
         </section>
 
-        <section class="parallax"></section>
+        <section class="project5-img-2 parallax"></section>
 
         <section class="am-text-img-content">
-            <div class="am-img-2-content"></div>
+            <div class="project5-img-3 am-img-2-content"></div>
             <div class="am-text-2-content">
                 <h2>Resultados</h2>
                 <ul>
@@ -91,10 +94,10 @@
                     <li>Lanzamiento y Promoción: Implementación de campañas de marketing digital para promover el lanzamiento de la aplicación y la plataforma web, utilizando estrategias de redes sociales y colaboraciones con influencers.</li>
                 </ul>
             </div>
-            <div class="am-img-2-content"></div>
+            <div class="project5-img-4 am-img-2-content"></div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="project5-img-5 parallax"></section>
 
         <section class="contact">
             <div class="contact-content">
@@ -102,7 +105,7 @@
                 <h2>¡Conéctate con nosotros!</h2>
                 <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
                 <div class="btn-contact">
-                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                    <a href="/paginas/contacto.html">Hablemos<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
         </section>
@@ -117,12 +120,12 @@
             <div class="column-list">
                 <h3>Páginas</h3>
                 <ul>
-                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="./blog.html">Blog<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="./contacto.html">Contacto<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="/index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="../servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="../proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="../acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="../blog.html">Blog<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="../contacto.html">Contacto<i class="las la-arrow-down"></i></a></li>
                 </ul>
             </div>
             <div class="column-list">
