vigesimo octavo cambio

--- a/paginas/blogs/blog-1.html
+++ b/paginas/blogs/blog-1.html
@@ -27,23 +27,27 @@
         </nav>
     </header>
 
-    <main >
-        <section class="p-blog-title">
-            <div class="p-blog-t-content">
+    <main class="p-blog-title">
+        <section class="about-me-page">
+            <div class="am-page-content">
                 <p class="min-text">Octubre 12, 2023</p>
                 <h1>¿Cómo mejorar la experiencia del usuario en tu sitio web?</h1>
                 <p>La experiencia del usuario (UX) es un factor crucial para el éxito de cualquier sitio web. Una buena UX puede aumentar el tiempo de permanencia en el sitio, mejorar la tasa de conversión y generar lealtad de los usuarios.</p>
             </div>
-            <div class="parallax"></div>
         </section>
+
+        <section class="blog1-img1 parallax"></section>
 
         <section class="blog-text-list">
             <div class="bl-text1">
                 <p>La experiencia del usuario (UX) es un factor crucial para el éxito de cualquier sitio web. Una buena UX puede aumentar el tiempo de permanencia en el sitio, mejorar la tasa de conversión y generar lealtad de los usuarios. En este artículo, exploraremos diversas estrategias y técnicas para optimizar la experiencia del usuario en tu sitio web.</p>
-                <h2>Estrategias para Optimizar la UX</h2>
             </div>
 
-            <div class="bl-text2">
+            <div>
+                <div>
+                    <h2 class="min-text">Estrategias para Optimizar la UX</h2>
+                </div>
+
                 <div>
                     <h3>I. Diseño Intuitivo</h3>
                     <p>El diseño intuitivo es fundamental para una buena experiencia del usuario. A continuación, te presentamos algunas prácticas para lograrlo:</p>
@@ -85,64 +89,64 @@
                 </div>
             </div>
 
-            <div>
-                <img src="" alt="">
+            <div class="blog-img">
+                <img src="/imagenes/andrew-neel-ute2XAFQU2I-unsplash.jpg" alt="">
             </div>
         </section>
 
-        <section class="blog-text-list-2">
-            <div class="bl2-text1">
-                <h2>Ejemplos Prácticos</h2>
-            </div>
-
-            <div class="bl2-text2">
+        <section class="blog-text-list">
+            <div>
                 <div>
+                    <h2 class="min-text">Ejemplos Prácticos</h2>
+                </div>
+
+                <div class="bl-text2">
                     <h3>Caso de Estudio 1</h3>
                     <p>Optimización de un Sitio de Comercio Electrónico Una tienda en línea implementó varias mejoras de UX, incluyendo la optimización de imágenes y la simplificación de la navegación. Como resultado, la velocidad de carga mejoró en un 40% y la tasa de conversión aumentó en un 25%.</p>
                 </div>
 
-                <div>
+                <div class="bl-text2">
                     <h3>Caso de Estudio 2</h3>
                     <p>Rediseño de un Blog de Tecnología Un blog de tecnología adoptó un enfoque mobile-first y mejoró la estructura de su contenido. Los usuarios móviles reportaron una mejor experiencia de lectura, y el tiempo promedio en el sitio aumentó en un 50%.</p>
                 </div>
             </div>
 
-            <div>
-                <img src="" alt="">
+            <div class="blog-img">
+                <img src="/imagenes/amelie-mourichon-wusOJ-2uY6w-unsplash.jpg" alt="">
             </div>
         </section>
 
-        <section class="blog-text-list-3">
-            <div class="bl3-text1">
-                <h2>Herramientas</h2>
-            </div>
-
-            <div class="bl3-text2">
+        <section class="blog-text-list">
+            <div>
                 <div>
+                    <h2 class="min-text">Herramientas</h2>
+                </div>
+
+                <div class="bl-text2">
                     <h3>I. Google Analytics:</h3>
                     <p>Una herramienta esencial para analizar el comportamiento de los usuarios en tu sitio y obtener información valiosa sobre áreas de mejora.</p>
                 </div>
 
-                <div>
+                <div class="bl-text2">
                     <h3>II. Hotjar:</h3>
                     <p>Proporciona mapas de calor y grabaciones de sesiones que muestran cómo los usuarios interactúan con tu sitio, lo que puede ayudar a identificar problemas de usabilidad.</p>
                 </div>
 
-                <div>
+                <div class="bl-text2">
                     <h3>III. PageSpeed Insights:</h3>
                     <p>Ofrece análisis detallados sobre la velocidad de carga de tu sitio y proporciona recomendaciones específicas para mejorar el rendimiento.</p>
                 </div>
 
-                <div>
+                <div class="bl-text2">
                     <h3>IV. UserTesting:</h3>
                     <p>Permite realizar pruebas de usabilidad con usuarios reales y obtener feedback directo sobre su experiencia en tu sitio.</p>
                 </div>
             </div>
         </section>
 
-        <section class="blog-conclusion">
-            <div>
-                <div class="bc-content">
+        <section class="blog-text-list">
+            <div class="blog-conclusion">
+                <div>
                     <h4>Conclusión</h4>
                     <p>Mejorar la experiencia del usuario es un proceso continuo que requiere atención constante y ajustes según los resultados y el feedback. Implementa las estrategias mencionadas y utiliza las herramientas adecuadas para asegurarte de que tu sitio web ofrezca la mejor experiencia posible a tus usuarios. Una buena UX no solo aumenta la satisfacción del usuario, sino que también puede mejorar significativamente los resultados de tu negocio.</p>
                 </div>
