vigesimo noveno cambio

--- a/index.html
+++ b/index.html
@@ -181,15 +181,15 @@
             </div>
             <div class="blogs-img-content">
                 <div class="img-blog-1 parallax-text">
-                    <a href=""><i class="las la-arrow-down btn-arrow"></i></a>
+                    <a href="/paginas/blogs/blog-1.html"><i class="las la-arrow-down btn-arrow"></i></a>
                     <h3>¿Cómo mejorar la experiencia del usuario en tu sitio web?</h3>
                 </div>
                 <div class="img-blog-2 parallax-text">
-                    <a href=""><i class="las la-arrow-down btn-arrow"></i></a>
+                    <a href="/paginas/blogs/blog-2.html"><i class="las la-arrow-down btn-arrow"></i></a>
                     <h3>Introducción a la realidad aumentada en aplicaciones móviles</h3>
                 </div>
                 <div class="img-blog-3 parallax-text">
-                    <a href=""><i class="las la-arrow-down btn-arrow"></i></a>
+                    <a href="/paginas/blogs/blog-3.html"><i class="las la-arrow-down btn-arrow"></i></a>
                     <h3>Impacto de la inteligencia artificial en el marketing digital</h3>
                 </div>
             </div>
