--- a/paginas/blogs/blog-1.html
+++ b/paginas/blogs/blog-1.html
@@ -100,14 +100,18 @@
                     <h2 class="min-text">Ejemplos Prácticos</h2>
                 </div>
 
-                <div class="bl-text2">
+                <div>
                     <h3>Caso de Estudio 1</h3>
-                    <p>Optimización de un Sitio de Comercio Electrónico Una tienda en línea implementó varias mejoras de UX, incluyendo la optimización de imágenes y la simplificación de la navegación. Como resultado, la velocidad de carga mejoró en un 40% y la tasa de conversión aumentó en un 25%.</p>
+                    <ul>
+                        <li>Optimización de un Sitio de Comercio Electrónico Una tienda en línea implementó varias mejoras de UX, incluyendo la optimización de imágenes y la simplificación de la navegación. Como resultado, la velocidad de carga mejoró en un 40% y la tasa de conversión aumentó en un 25%.</li>
+                    </ul>
                 </div>
 
-                <div class="bl-text2">
+                <div>
                     <h3>Caso de Estudio 2</h3>
-                    <p>Rediseño de un Blog de Tecnología Un blog de tecnología adoptó un enfoque mobile-first y mejoró la estructura de su contenido. Los usuarios móviles reportaron una mejor experiencia de lectura, y el tiempo promedio en el sitio aumentó en un 50%.</p>
+                    <ul>
+                        <li>Rediseño de un Blog de Tecnología Un blog de tecnología adoptó un enfoque mobile-first y mejoró la estructura de su contenido. Los usuarios móviles reportaron una mejor experiencia de lectura, y el tiempo promedio en el sitio aumentó en un 50%.</li>
+                    </ul>
                 </div>
             </div>
 
@@ -122,24 +126,32 @@
                     <h2 class="min-text">Herramientas</h2>
                 </div>
 
-                <div class="bl-text2">
+                <div>
                     <h3>I. Google Analytics:</h3>
-                    <p>Una herramienta esencial para analizar el comportamiento de los usuarios en tu sitio y obtener información valiosa sobre áreas de mejora.</p>
+                    <ul>
+                        <li>Una herramienta esencial para analizar el comportamiento de los usuarios en tu sitio y obtener información valiosa sobre áreas de mejora.</li>
+                    </ul>
                 </div>
 
-                <div class="bl-text2">
+                <div>
                     <h3>II. Hotjar:</h3>
-                    <p>Proporciona mapas de calor y grabaciones de sesiones que muestran cómo los usuarios interactúan con tu sitio, lo que puede ayudar a identificar problemas de usabilidad.</p>
+                    <ul>
+                        <li>Proporciona mapas de calor y grabaciones de sesiones que muestran cómo los usuarios interactúan con tu sitio, lo que puede ayudar a identificar problemas de usabilidad.</li>
+                    </ul>
                 </div>
 
-                <div class="bl-text2">
+                <div>
                     <h3>III. PageSpeed Insights:</h3>
-                    <p>Ofrece análisis detallados sobre la velocidad de carga de tu sitio y proporciona recomendaciones específicas para mejorar el rendimiento.</p>
+                    <ul>
+                        <li>Ofrece análisis detallados sobre la velocidad de carga de tu sitio y proporciona recomendaciones específicas para mejorar el rendimiento.</li>
+                    </ul>
                 </div>
 
-                <div class="bl-text2">
+                <div>
                     <h3>IV. UserTesting:</h3>
-                    <p>Permite realizar pruebas de usabilidad con usuarios reales y obtener feedback directo sobre su experiencia en tu sitio.</p>
+                    <ul>
+                        <li>Permite realizar pruebas de usabilidad con usuarios reales y obtener feedback directo sobre su experiencia en tu sitio.</li>
+                    </ul>
                 </div>
             </div>
         </section>
